# UserBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bot.py  docker-compose.yml  example.env  manage.py  pyproject.toml  requirements.txt
.config/: settings.json
.docker/: redis.Dockerfile  ub.Dockerfile
alembic/: env.py
alembic/versions/: 001_initial.py  002_acl_grants.py
src/: config.py
src/bot/: __init__.py  utils.py
src/bot/acl/: __init__.py  router.py
src/bot/afk/: __init__.py  router.py  storage.py
src/bot/agentic/: __init__.py  router.py
src/bot/ai/: __init__.py  helpers.py  prefs.py  prompts.py  router.py  tools.py
src/bot/fun/: __init__.py  router.py
src/bot/info/: __init__.py  help.py  router.py
src/bot/interpreters/: __init__.py  messages.py  parsing.py  router.py  storage.py
src/bot/modules/: __init__.py  afk.py  ai.py  fun.py  ignore.py  info.py  interpreters.py  notes.py  quote.py  reminders.py
src/bot/modules/afk/: __init__.py  commands.py  router.py  storage.py
src/bot/modules/ai/: __init__.py  chat.py  codex.py  prompts.py  router.py  tldr.py  translate.py
src/bot/modules/info/: __init__.py  crypto.py  router.py  weather.py
src/bot/modules/interpreters/: __init__.py  code.py  pyexec.py  router.py  run.py
src/bot/modules/notes/: __init__.py  commands.py  router.py  storage.py
src/bot/modules/quote/: __init__.py  avatar.py  commands.py  fonts.py  render.py  router.py
src/bot/modules/reminders/: __init__.py  commands.py  loop.py  parser.py  router.py  storage.py
src/bot/notes/: __init__.py  router.py  storage.py
src/bot/quote/: __init__.py  router.py
src/bot/tools/: dispatcher.py  router.py  utils.py
src/core/: __init__.py  dispatcher.py  router.py  utils.py
src/core/acl/: __init__.py  filter.py  registry.py  storage.py
src/db/: __init__.py
src/db/models/: __init__.py  acl.py  agent.py  chat.py  memory.py  message.py  user.py
src/modules/: fun.py  ignore.py  interpreters.py
src/services/: codex.py  gemini.py  openai.py
src/services/acl/: __init__.py  filter.py  registry.py  storage.py
src/services/agentic/: __init__.py  normalize.py  runtime.py  storage.py  tools.py
src/services/code_pars/: base.py  piston.py  python.py  utils.py
src/services/codex/: __init__.py  client.py  constants.py  oauth.py  store.py  stream.py  tokens.py
src/services/crypto/: __init__.py  coins.py  models.py  service.py
src/services/mermaid/: __init__.py  service.py
src/services/ollama/: __init__.py  client.py
src/services/quote/: __init__.py  avatar.py  bubble.py  constants.py  fonts.py  render.py  service.py
src/services/weather/: __init__.py  codes.py  models.py  service.py
src/tools/: dispatcher.py  router.py
tests/: test_message_utils.py
