[tool.poetry]
name = "userbot"
version = "0.1.0"
description = ""
authors = ["CBoYXD <python.rust.cpp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
redis = {extras = ["hiredis"], version = "^5.0.2"}
environs = "^10.3.0"
pyrogram = "^2.0.106"
betterlogging = "^1.0.0"
tgcrypto = "^1.2.5"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
piston-rspy = "^0.4.3"
meval = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    ""
]

# Same as Black.
line-length = 70
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
