[project]
name = "userbot"
version = "0.1.0"
description = "Telegram userbot with OpenAI Codex integration"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "CBoYXD", email = "python.rust.cpp@gmail.com"}]
dependencies = [
    "redis[hiredis]==5.0.2",
    "environs==10.3.0",
    "kurigram>=2.2.19",
    "betterlogging==1.0.0",
    "tgcrypto==1.2.5",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "piston-rspy==0.4.3",
    "meval==2.5",
    "httpx>=0.27.0",
    "pillow>=10.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools]
py-modules = ["bot", "manage"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    ""
]

# Same as Black.
line-length = 70
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
